# muscles-documents

./: README.md  pyproject.toml
docs/: telemetry.md
examples/: run_documents_pipeline.py  run_documents_sync.py
src/muscles_documents/: __init__.py  actions.py  config.py  package.py  runtime.py  schemas.py
tests/: test_ingestion_toolkit.py  test_init.py  test_telemetry.py
