[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muscles-documents"
version = "0.1.0"
description = "Framework-level document ingestion primitives for Muscles"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Denis B.", email = "denis@butko.info" }]
dependencies = [
  "muscles>=3.0.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
